[package]
name = "memory-rs"
version = "0.2.1"
authors = ["Sebastian Aedo <sebastian.aedo@sansano.usm.cl>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "tlhelp32", "handleapi", "impl-default", "memoryapi", "processthreadsapi", "psapi", "libloaderapi"] }
anyhow = "1.0.34"
