[package]
name = "memory-rs"
version = "0.2.5"
authors = ["Sebastian Aedo <sebastian.aedo29@gmail.com>"]
license = "MIT"
description = "Library for game hacking in Windows."
edition = "2018"

[dependencies]
anyhow = "1.0.34"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.35", features = [ "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_SystemServices", "Win32_Security" ] }

[features]
default = ["impl-drop"]
impl-drop = []

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
